fixing login page + hamburger menu on small screens

--- a/HTML/app/styles/main-tablet.scss
+++ b/HTML/app/styles/main-tablet.scss
@@ -21,6 +21,11 @@
   
   .navbar-toggle {
     margin-top:12px;
+    background: #424242 !important;
+
+    .icon-bar {
+      background: #ffffff !important;
+    }
   }
   .navbar-right > li > .notifications {
     border:0 !important;
