--- a/HTML/app/styles/main-web.scss
+++ b/HTML/app/styles/main-web.scss
@@ -32,7 +32,7 @@ body.pre-login {
 }
 
 .post-login {
-  margin-top:80px;
+  margin-top:0px;
 }
 
 
